Date changed in Article and Lineup optimizer page.

--- a/src/app/front/components/articles/articles.component.html
+++ b/src/app/front/components/articles/articles.component.html
@@ -108,8 +108,8 @@
                                 <div class="mPlaceInfoWrap">
                                   <a class="mPlaceHedin">{{post.title.rendered}}</a>
                                   <p class="mPlacePara">{{post.extract}}</p>
-                                  <p class="mPlaceWrtr">Posted By: <a href="javascript:void(0)">Derek Carty</a></p>
-                                  <p class="mPlaceWrtr">Posted Date: <a href="javascript:void(0)">06/07/2017</a></p>
+                                  <!--<p class="mPlaceWrtr">Posted By: <a href="javascript:void(0)">Derek Carty</a></p>-->
+                                  <p class="mPlaceWrtr">Posted Date: <a href="javascript:void(0)">{{post.date | date:'dd MMM yyyy h:m a'}}</a></p>
                                 </div>
                               </div>
                             </div>
@@ -128,8 +128,8 @@
                                 <div class="mPlaceInfoWrap">
                                   <a class="mPlaceHedin">{{post.title.rendered}}</a>
                                   <p class="mPlacePara">{{post.extract}}</p>
-                                  <p class="mPlaceWrtr">Posted By: <a href="javascript:void(0)">Derek Carty</a></p>
-                                  <p class="mPlaceWrtr">Posted Date: <a href="javascript:void(0)">06/07/2017</a></p>
+                                  <!--<p class="mPlaceWrtr">Posted By: <a href="javascript:void(0)">Derek Carty</a></p>-->
+                                  <p class="mPlaceWrtr">Posted Date: <a href="javascript:void(0)">{{post.date | date:'dd MMM yyyy h:m a'}}</a></p>
                                 </div>
                               </div>
                             </div>
@@ -148,8 +148,8 @@
                                 <div class="mPlaceInfoWrap">
                                   <a class="mPlaceHedin">{{post.title.rendered}}</a>
                                   <p class="mPlacePara">{{post.extract}}</p>
-                                  <p class="mPlaceWrtr">Posted By: <a href="javascript:void(0)">Derek Carty</a></p>
-                                  <p class="mPlaceWrtr">Posted Date: <a href="javascript:void(0)">06/07/2017</a></p>
+                                  <!--<p class="mPlaceWrtr">Posted By: <a href="javascript:void(0)">Derek Carty</a></p>-->
+                                  <p class="mPlaceWrtr">Posted Date: <a href="javascript:void(0)">{{post.date | date:'dd MMM yyyy h:m a'}}</a></p>
                                 </div>
                               </div>
                             </div>
@@ -168,8 +168,8 @@
                                 <div class="mPlaceInfoWrap">
                                   <a class="mPlaceHedin">{{post.title.rendered}}</a>
                                   <p class="mPlacePara">{{post.extract}}</p>
-                                  <p class="mPlaceWrtr">Posted By: <a href="javascript:void(0)">Derek Carty</a></p>
-                                  <p class="mPlaceWrtr">Posted Date: <a href="javascript:void(0)">06/07/2017</a></p>
+                                  <!--<p class="mPlaceWrtr">Posted By: <a href="javascript:void(0)">Derek Carty</a></p>-->
+                                  <p class="mPlaceWrtr">Posted Date: <a href="javascript:void(0)">{{post.date | date:'dd MMM yyyy h:m a'}}</a></p>
                                 </div>
                               </div>
                             </div>
@@ -226,8 +226,8 @@
                           <div class="mPlaceInfoWrap">
                             <a class="mPlaceHedin">{{post.title.rendered}}</a>
                             <p class="mPlacePara">{{post.extract}}</p>
-                            <p class="mPlaceWrtr">Posted By: <a href="javascript:void(0)">Derek Carty</a></p>
-                            <p class="mPlaceWrtr">Posted Date: <a href="javascript:void(0)">06/07/2017</a></p>
+                            <!--<p class="mPlaceWrtr">Posted By: <a href="javascript:void(0)">Derek Carty</a></p>-->
+                            <p class="mPlaceWrtr">Posted Date: <a href="javascript:void(0)">{{post.date | date:'dd MMM yyyy h:m a'}}</a></p>
                           </div>
                         </div>
                       </div>
