- extension link and excel tool updated

--- a/src/app/front/components/extensions/extensions.component.html
+++ b/src/app/front/components/extensions/extensions.component.html
@@ -22,7 +22,7 @@
         </h1>
         <p class="bowerSecHedin">DOWNLOAD THE DF SPORTS GODS EXTENSION FOR GOOGLE CHROME</p>
 
-        <a href="javascript:void(0)" class="bowerDwnBtn">Download</a>
+        <a target="_blank" href="https://chrome.google.com/webstore/detail/draftkingsfanduel-tools/oiimipecejocdcbiedlbabkgmldkjhma" class="bowerDwnBtn">Download</a>
       </div>
     </div>
   </div>
@@ -34,7 +34,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div class="bowerSection2Lft">
-            <img src="images/extension.jpg" alt="" class="img-responsive">
+            <img src="../../../../assets/images/extension.jpg" alt="" class="img-responsive">
           </div>
           <div class="bowerSection2Rght">
             <p class="bowerPara">The Gods have created a game changing Google Chrome extension that seamlessly integrates with your Google Chrome Browser. Simply click the link below to visit the Chrome Web Store to install the extension.</p>
