--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -9,6 +9,9 @@
               <li routerLinkActive="active" *ngIf="role == 'provider'" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/provider-lineup">My Lineups</a>
               </li>
+              <li routerLinkActive="active"  [routerLinkActiveOptions]="{exact: false}">
+                <a routerLink="/provider-public-lineups">Lineups</a>
+              </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/lineup-optimizer">Lineup Optimizer</a>
               </li>
