- lineup public page and analyst add lineup page updated - WIP - Excel tool updated in info page - Latest Tool updated on serve

--- a/src/app/front/components/excel-tool/excel-tool.component.html
+++ b/src/app/front/components/excel-tool/excel-tool.component.html
@@ -27,7 +27,8 @@
 
           </div>
           <div class="mlbTopRght">
-            <button type="button" class="dwnldBtn">Download</button>
+            <a target="_blank" href="https://api.dfsportgod.com/uploads/excel_tool.exe" class="dwnldBtn">Download</a>
+            <!--<button type="button" class="dwnldBtn">Download</button>-->
           </div>
 
         </div>
