--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -7,7 +7,7 @@
           <nav class="topNavbar">
             <ul class="pull-right">
               <li routerLinkActive="active" *ngIf="role == 'provider'" [routerLinkActiveOptions]="{exact: false}">
-                <a routerLink="/provider-lineup">My Lineups</a>
+                <a routerLink="/provider-lineups">My Lineups</a>
               </li>
               <li routerLinkActive="active"  [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/provider-public-lineups">Lineups</a>
