--- a/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
+++ b/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
@@ -185,6 +185,7 @@
                           <tbody *ngIf="advFilterSettings">
                           <tr *ngFor="let game of advFilterSettings.games">
                             <td><input style="width: 56px" class="form-control"
+                                       (input)="validateHomeTeamMinValue($event,game)"
                                        [(ngModel)]="game.homeTeamMinValue">
                             </td>
                             <td class="td-team"><img style="width: 70px;height: 40px" [attr.src]="game.homeTeamLogo"
@@ -194,6 +195,7 @@
                             </td>
                             <td>@</td>
                             <td><input style="width: 56px" class="form-control"
+                                       (input)="validateAwayTeamMinValue($event,game)"
                                        [(ngModel)]="game.awayTeamMinValue">
                             </td>
                             <td class="td-team"><img style="width: 70px;height: 40px" [attr.src]="game.awayTeamLogo"/>
@@ -219,31 +221,39 @@
                     <tr>
                       <th>Select Stack</th>
                       <th>Team</th>
-                      <th># of Players</th>
+                      <th># of Players
+                        <span *ngIf="selectedOperator == 'DraftKings'" style="font-size: 12px"> ({{stackingTeam1.players+stackingTeam2.players+stackingTeam3.players}} player(s) stacked out of 10)</span>
+                        <span *ngIf="selectedOperator == 'FanDuel'" style="font-size: 12px"> ({{stackingTeam1.players+stackingTeam2.players+stackingTeam3.players}} player(s) stacked out of 9)</span>
+                      </th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                       <td>Select Stack</td>
                       <td>
-                        <select class="form-control" [(ngModel)]="stackingTeam1.name">
+                        <select class="form-control" [(ngModel)]="stackingTeam1.name" (change)="prepareStacks()">
                           <option [value]="'-'" selected>Select team</option>
-                          <option *ngFor="let team of stackingData" [value]="team.team">{{team.team}}</option>
+                          <option *ngFor="let team of stack1" [value]="team.team">{{team.team}}</option>
                         </select>
                       </td>
                       <td>
                         <nav aria-label="Page navigation">
-                          <ul class="pagination">
+                          <ul class="pagination" *ngIf="stackingTeam1.name != '-'">
                             <li [class.active]="stackingTeam1.players == 1"
-                                (click)="stackingTeam1.players = 1"><a>1</a></li>
+                                (click)="stackingTeam1.players = 1;validateStakingPlayerCount(stackingTeam1)"><a>1</a>
+                            </li>
                             <li [class.active]="stackingTeam1.players == 2"
-                                (click)="stackingTeam1.players = 2"><a>2</a></li>
+                                (click)="stackingTeam1.players = 2;validateStakingPlayerCount(stackingTeam1)"><a>2</a>
+                            </li>
                             <li [class.active]="stackingTeam1.players == 3"
-                                (click)="stackingTeam1.players = 3"><a>3</a></li>
+                                (click)="stackingTeam1.players = 3;validateStakingPlayerCount(stackingTeam1)"><a>3</a>
+                            </li>
                             <li [class.active]="stackingTeam1.players == 4"
-                                (click)="stackingTeam1.players = 4"><a>4</a></li>
-                            <li [class.active]="stackingTeam1.players == 5"
-                                (click)="stackingTeam1.players = 5"><a>5</a></li>
+                                (click)="stackingTeam1.players = 4;validateStakingPlayerCount(stackingTeam1)"><a>4</a>
+                            </li>
+                            <li *ngIf="selectedOperator == 'DraftKings'" [class.active]="stackingTeam1.players == 5"
+                                (click)="stackingTeam1.players = 5;validateStakingPlayerCount(stackingTeam1)"><a>5</a>
+                            </li>
                           </ul>
                         </nav>
                       </td>
@@ -251,24 +261,29 @@
                     <tr>
                       <td>Select Stack</td>
                       <td>
-                        <select class="form-control" [(ngModel)]="stackingTeam2.name">
+                        <select class="form-control" [(ngModel)]="stackingTeam2.name" (change)="prepareStacks()">
                           <option [value]="'-'" selected>Select team</option>
-                          <option *ngFor="let team of stackingData" [value]="team.team">{{team.team}}</option>
+                          <option *ngFor="let team of stack2" [value]="team.team">{{team.team}}</option>
                         </select>
                       </td>
                       <td>
                         <nav aria-label="Page navigation">
-                          <ul class="pagination">
+                          <ul class="pagination" *ngIf="stackingTeam2.name != '-'">
                             <li [class.active]="stackingTeam2.players == 1"
-                                (click)="stackingTeam2.players = 1"><a>1</a></li>
+                                (click)="stackingTeam2.players = 1;validateStakingPlayerCount(stackingTeam2)"><a>1</a>
+                            </li>
                             <li [class.active]="stackingTeam2.players == 2"
-                                (click)="stackingTeam2.players = 2"><a>2</a></li>
+                                (click)="stackingTeam2.players = 2;validateStakingPlayerCount(stackingTeam2)"><a>2</a>
+                            </li>
                             <li [class.active]="stackingTeam2.players == 3"
-                                (click)="stackingTeam2.players = 3"><a>3</a></li>
+                                (click)="stackingTeam2.players = 3;validateStakingPlayerCount(stackingTeam2)"><a>3</a>
+                            </li>
                             <li [class.active]="stackingTeam2.players == 4"
-                                (click)="stackingTeam2.players = 4"><a>4</a></li>
-                            <li [class.active]="stackingTeam2.players == 5"
-                                (click)="stackingTeam2.players = 5"><a>5</a></li>
+                                (click)="stackingTeam2.players = 4;validateStakingPlayerCount(stackingTeam2)"><a>4</a>
+                            </li>
+                            <li *ngIf="selectedOperator == 'DraftKings'" [class.active]="stackingTeam2.players == 5"
+                                (click)="stackingTeam2.players = 5;validateStakingPlayerCount(stackingTeam2)"><a>5</a>
+                            </li>
                           </ul>
                         </nav>
                       </td>
@@ -276,24 +291,29 @@
                     <tr>
                       <td>Select Stack</td>
                       <td>
-                        <select class="form-control" [(ngModel)]="stackingTeam3.name">
+                        <select class="form-control" [(ngModel)]="stackingTeam3.name" (change)="prepareStacks()">
                           <option [value]="'-'">Select team</option>
-                          <option *ngFor="let team of stackingData" [value]="team.team">{{team.team}}</option>
+                          <option *ngFor="let team of stack3" [value]="team.team">{{team.team}}</option>
                         </select>
                       </td>
                       <td>
                         <nav aria-label="Page navigation">
-                          <ul class="pagination">
+                          <ul class="pagination" *ngIf="stackingTeam3.name != '-'">
                             <li [class.active]="stackingTeam3.players == 1"
-                                (click)="stackingTeam3.players = 1"><a>1</a></li>
+                                (click)="stackingTeam3.players = 1;validateStakingPlayerCount(stackingTeam3)"><a>1</a>
+                            </li>
                             <li [class.active]="stackingTeam3.players == 2"
-                                (click)="stackingTeam3.players = 2"><a>2</a></li>
+                                (click)="stackingTeam3.players = 2;validateStakingPlayerCount(stackingTeam3)"><a>2</a>
+                            </li>
                             <li [class.active]="stackingTeam3.players == 3"
-                                (click)="stackingTeam3.players = 3"><a>3</a></li>
+                                (click)="stackingTeam3.players = 3;validateStakingPlayerCount(stackingTeam3)"><a>3</a>
+                            </li>
                             <li [class.active]="stackingTeam3.players == 4"
-                                (click)="stackingTeam3.players = 4"><a>4</a></li>
-                            <li [class.active]="stackingTeam3.players == 5"
-                                (click)="stackingTeam3.players = 5"><a>5</a></li>
+                                (click)="stackingTeam3.players = 4;validateStakingPlayerCount(stackingTeam3)"><a>4</a>
+                            </li>
+                            <li *ngIf="selectedOperator == 'DraftKings'" [class.active]="stackingTeam3.players == 5"
+                                (click)="stackingTeam3.players = 5;validateStakingPlayerCount(stackingTeam3)"><a>5</a>
+                            </li>
                           </ul>
                         </nav>
                       </td>
